# prevo

./: .gitignore  GraphExamples.ipynb  MANIFEST.in  README.md  setup.cfg
data/manip/: Vacuum_Pressure.tsv  Vacuum_SourceBath.tsv  Vacuum_Temperature.tsv
examples/: Control.ipynb  LiveGraph.ipynb  NewViewers.ipynb  Record.ipynb  Record_Images.ipynb  TkViewers.ipynb  Viewers.ipynb  Viewers2.ipynb  matplotlib_viewers.py
prevo/: __init__.py  csv.py  fileio.py  measurements.py  misc.py  parser.py  plot.py  record.py  view.py  viewers.py
prevo/control/: __init__.py  control.py  program.py
prevo/plot/: __init__.py  general.py  oscillo.py  plot.py
prevo/record/: cameras.py  general.py  images.py  numerical.py
prevo/viewers/: __init__.py  general.py  matplotlib.py  opencv.py  pyside.py  tkinter.py
recto/: __init__.py  fileio.py  measurements.py  misc.py  plot.py  record.py  sensors.py  view.py
tests/: test_csv.py  test_measurements.py  test_recto.py
