[metadata]
name = recto
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://cameleon.univ-lyon1.fr/ovincent/recto
description = Base package to record data periodically
long_description = file: README.md
long_description_content_type = text/markdown
keywords = periodic, recording, data
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    pandas
    oclock > 1.2.2
    tzlocal < 3.0
    clivo >= 0.2.0
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
